fix datatable download button alignment on centered pages

--- a/static/ki/ki.css
+++ b/static/ki/ki.css
@@ -42,6 +42,11 @@ body{
 }
 
 /* DataTable */
+.ki_datatable{
+	display:inline-block;
+	text-align:left;
+}
+
 .ki_table{
 	display:table;
 	border-collapse:separate;
